--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,16 @@
+.DS_Store
 *.out
 *.py~
 *.py.un~
 *.py.un
 *.pyc
-/__pycache__
-./morphLf
-morphLf
-*.txt
-*.poly
-./data/*
-*/inputFiles/*
-*.job
-./polyFiles/*
+*/__pycache__
 .ipynb_checkpoints/
 *.swp
-*/data_?/*
-/code_for*/*
+*.txt
+*.poly
+/data/
+inputFiles/
+*.job
+polyFiles/
+test/
